samples/_failures_safe/1761089466_4fecc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bfb5899.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_2bfb5899.c:187:17: error: expected declaration or statement at end of input
  187 |                 graph->edges[i]->target->visited = 1;
      |                 ^~~~~
./samples/SAFE/__tmp_2bfb5899.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2bfb5899.c:187:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2bfb5899.c:187:17: error: expected declaration or statement at end of input
